--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta name="description" content="Learn Better, Achieve More, EduWin Together">
-    <meta name="keywords" content="Tutor,Mathematics,Science,Primary,Secondary">
+    <meta name="description" content="Top-quality Singapore & IGCSE Math tutoring tailored for student success at Eduwin Academy.">
+    <meta name="keywords" content="Tuition,Tutor,Math,English,Science,Chinese,Primary,School">
     <meta property="og:title" content="EduWin">
     <meta property="og:description" content="Learn Better, Achieve More, EduWin Together">
 <!--    TODO: fix when we get a proper domain-->
